# tpa-engine

./: .gitignore  .mailmap  AGENTS.md  CITATION.cff  CLA.md  CONTRIBUTING.md  COPYRIGHT  LICENSE  LICENSING.md  NOTICE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
PROVENANCE/: README.md  priority-20260715.manifest  priority-20260715.manifest.ots
docs/: ARCHITECTURE.md
src/codegraph/: __init__.py  ast_backend.py  cli.py  fitness.py  graphml_sink.py  neo4j_sink.py  scip_backend.py
src/tpa_engine/: __init__.py  ast_backend.py  backends.py  baseline.py  cli.py  fitness.py  joern_backend.py  mcp_neo4j_sink.py  model.py  neo4j_sink.py  scip_backend.py  sinks.py
src/tpa_engine/frontends/: __init__.py  python_static.py  scala_static.py
tests/: test_ast_backend.py  test_backend_conformance.py  test_baseline.py  test_fitness.py  test_joern_backend.py  test_joern_run_integration.py  test_mcp_neo4j_sink.py  test_model.py  test_model_conformance.py  test_python_static_backend.py  test_scala_static_backend.py  test_scip_tokenizer.py  test_sink_conformance.py
tests/fixtures/: joern_export.json
tests/fixtures/javapkg/com/acme/: App.java  Base.java  Greeter.java
tests/fixtures/scalapkg/src/main/scala/com/acme/: Base.scala  Impl.scala
tests/fixtures/staticpkg/: __init__.py  base.py  impl.py
tests/fixtures/tinypkg/: __init__.py  core.py  util.py
